//Emiya 1-1:~ //Emiya 1-5:報告

--- a/お餅伝説２/Project1.vcxproj
+++ b/お餅伝説２/Project1.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="camera2D.cpp" />
     <ClCompile Include="collision.cpp" />
     <ClCompile Include="enemy.cpp" />
     <ClCompile Include="fight.cpp" />
@@ -33,7 +33,7 @@
     <ClCompile Include="player.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Camera.h" />
+    <ClInclude Include="camera2D.h" />
     <ClInclude Include="collision.h" />
     <ClInclude Include="Declaration.cpp" />
     <ClInclude Include="enemy.h" />
