--- a/お餅伝説２/Project1.vcxproj.filters
+++ b/お餅伝説２/Project1.vcxproj.filters
@@ -30,85 +30,46 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Function.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="player.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="fight.cpp">
-      <Filter>ソース ファイル\戦闘ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="mobchara.cpp">
-      <Filter>ヘッダー ファイル\描画関係</Filter>
-    </ClCompile>
-    <ClCompile Include="mouse.cpp">
-      <Filter>リソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="fps.cpp">
-      <Filter>ヘッダー ファイル\描画関係</Filter>
-    </ClCompile>
-    <ClCompile Include="map.cpp">
-      <Filter>ヘッダー ファイル\描画関係</Filter>
-    </ClCompile>
-    <ClCompile Include="collision.cpp">
-      <Filter>ソース ファイル\当たり判定</Filter>
-    </ClCompile>
-    <ClCompile Include="enemy.cpp">
-      <Filter>ソース ファイル\戦闘ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="MainScreen.cpp">
-      <Filter>ヘッダー ファイル\描画関係</Filter>
-    </ClCompile>
-    <ClCompile Include="camera2D.cpp">
-      <Filter>ヘッダー ファイル\描画関係</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="FunctionDeclaration.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="Declaration.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="fight.h">
-      <Filter>ソース ファイル\戦闘ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="map.h">
-      <Filter>ヘッダー ファイル\描画関係</Filter>
-    </ClInclude>
-    <ClInclude Include="mobchara.h">
-      <Filter>ヘッダー ファイル\描画関係</Filter>
-    </ClInclude>
-    <ClInclude Include="mouse.h">
-      <Filter>リソース ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="fps.h">
-      <Filter>ヘッダー ファイル\描画関係</Filter>
-    </ClInclude>
-    <ClInclude Include="collision.h">
-      <Filter>ソース ファイル\当たり判定</Filter>
-    </ClInclude>
-    <ClInclude Include="enemy.h">
-      <Filter>ソース ファイル\戦闘ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="MainScreen.h">
-      <Filter>ヘッダー ファイル\描画関係</Filter>
-    </ClInclude>
-    <ClInclude Include="camera2D.h">
-      <Filter>ヘッダー ファイル\描画関係</Filter>
     </ClInclude>
     <ClInclude Include="Source\Algorithm\Vector2D.h">
       <Filter>ソース ファイル\Source\Algorithm</Filter>
     </ClInclude>
-    <ClInclude Include="player.h">
-      <Filter>ソース ファイル</Filter>
+    <ClInclude Include="Source\camera2D.h">
+      <Filter>ソース ファイル\Source</Filter>
     </ClInclude>
+    <ClInclude Include="Source\fps.h">
+      <Filter>ソース ファイル\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\MainScreen.h">
+      <Filter>ソース ファイル\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\map.h">
+      <Filter>ソース ファイル\Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\player.h">
+      <Filter>ソース ファイル\Source</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source\camera2D.cpp">
+      <Filter>ソース ファイル\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\fps.cpp">
+      <Filter>ソース ファイル\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\MainScreen.cpp">
+      <Filter>ソース ファイル\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\map.cpp">
+      <Filter>ソース ファイル\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\player.cpp">
+      <Filter>ソース ファイル\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\main.cpp">
+      <Filter>ソース ファイル\Source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
