サンプル改修中　ゲーム内単位を1=1タイルに修正

--- a/emiya_sample/DXLib_ref/DXLib_ref.vcxproj
+++ b/emiya_sample/DXLib_ref/DXLib_ref.vcxproj
@@ -175,8 +175,8 @@
     <ClInclude Include="DXLib_ref_40_DXDraw.hpp" />
     <ClInclude Include="DXLib_ref.h" />
     <ClInclude Include="DXLib_ref_00_Util.hpp" />
-    <ClInclude Include="DXLib_ref_01_Vector.hpp" />
-    <ClInclude Include="DXLib_ref_02_SoundHandle.hpp" />
+    <ClInclude Include="DXLib_ref_01_Algorithm.hpp" />
+    <ClInclude Include="DXLib_ref_02_Sound.hpp" />
     <ClInclude Include="DXLib_ref_03_GraphHandle.hpp" />
     <ClInclude Include="DXLib_ref_08_Etc.hpp" />
     <ClInclude Include="DXLib_ref_09_KeyControl.hpp" />
@@ -191,7 +191,7 @@
     <ClCompile Include="DXLib_ref_12_Draw2DSystem.cpp" />
     <ClCompile Include="DXLib_ref_40_DXDraw.cpp" />
     <ClCompile Include="DXLib_ref.cpp" />
-    <ClCompile Include="DXLib_ref_02_SoundHandle.cpp" />
+    <ClCompile Include="DXLib_ref_02_Sound.cpp" />
     <ClCompile Include="DXLib_ref_08_Etc.cpp" />
     <ClCompile Include="DXLib_ref_09_KeyControl.cpp" />
     <ClCompile Include="DXLib_ref_100_PostPass.cpp" />
