--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@
 /emiya_sample/DXLib_ref/DXLib_ref.idb
 /emiya_sample/DXLib_ref/DXLib_ref.lib
 /emiya_sample/DXLib_ref/DXLib_ref.pdb
+/emiya_sample/DXLib_ref/.vs/DXLib_ref2D
+/emiya_sample/DXLib_ref/DXLib_ref2D/x64/Debug
+/emiya_sample/DXLib_ref/DXLib_ref2D.idb
+/emiya_sample/DXLib_ref/DXLib_ref2D.lib
+/emiya_sample/DXLib_ref/DXLib_ref2D.pdb
