--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /emiya_sample/DXLib_ref/DXLib_ref.idb
 /emiya_sample/DXLib_ref/DXLib_ref.lib
 /emiya_sample/DXLib_ref/DXLib_ref.pdb
+/emiya_sample/AhoGe/Project/Save/Setting.txt
+/.gitignore
