--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@
 /emiya_sample/DXLib_ref/DXLib_ref.pdb
 /emiya_sample/AhoGe/Project/Save/Setting.txt
 /.gitignore
+/emiya_sample/DXLib_ref/DXLib_ref2D.sln
+/.gitignore
+/.gitignore
