--- a/お餅伝説２/Project1.vcxproj
+++ b/お餅伝説２/Project1.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="Source\Algorithm\Vector2D.h" />
     <ClInclude Include="Source\Battle.h" />
     <ClInclude Include="Source\camera2D.h" />
+    <ClInclude Include="Source\Enemy.hpp" />
     <ClInclude Include="Source\fps.h" />
     <ClInclude Include="Source\map.h" />
     <ClInclude Include="Source\player.h" />
@@ -33,6 +34,7 @@
     <ClCompile Include="option.cpp" />
     <ClCompile Include="Source\Battle.cpp" />
     <ClCompile Include="Source\camera2D.cpp" />
+    <ClCompile Include="Source\Enemy.cpp" />
     <ClCompile Include="Source\fps.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\map.cpp" />
