--- a/お餅伝説２/Project1.vcxproj
+++ b/お餅伝説２/Project1.vcxproj
@@ -19,25 +19,25 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="option.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Source\Algorithm\Vector2D.h" />
     <ClInclude Include="Source\Battle.h" />
     <ClInclude Include="Source\camera2D.h" />
-    <ClInclude Include="Source\Enemy.hpp" />
+    <ClInclude Include="Source\Enemy.h" />
     <ClInclude Include="Source\fps.h" />
     <ClInclude Include="Source\map.h" />
+    <ClInclude Include="Source\option.h" />
     <ClInclude Include="Source\player.h" />
     <ClInclude Include="Source\Screen.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="option.cpp" />
     <ClCompile Include="Source\Battle.cpp" />
     <ClCompile Include="Source\camera2D.cpp" />
     <ClCompile Include="Source\Enemy.cpp" />
     <ClCompile Include="Source\fps.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\map.cpp" />
+    <ClCompile Include="Source\option.cpp" />
     <ClCompile Include="Source\player.cpp" />
     <ClCompile Include="Source\Screen.cpp" />
   </ItemGroup>
