--- a/お餅伝説２/Project1.vcxproj.filters
+++ b/お餅伝説２/Project1.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="Source\Enemy.h">
       <Filter>ソース ファイル\Source</Filter>
     </ClInclude>
+    <ClInclude Include="resource1.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Battle.cpp">
